# DataGenie

./: .env.example  .gitignore  README.md  app.py  deployed.py  llm.py  pyproject.toml
helpers/: llm.py  utils.py  vis.py
