[tool.poetry]
name = "data-analyst-project"
version = "0.1.0"
description = ""
authors = ["Jefferson Qiu <jeffersonqiu1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.32.2"
python-dotenv = "^1.0.1"
pandas = "^2.2.1"
langchain-openai = "^0.1.1"
langchain = "^0.1.14"
langchain-experimental = "^0.0.56"
tabulate = "^0.9.0"
langchainhub = "^0.1.15"
duckduckgo-search = "^5.2.2"
google-search-results = "^2.4.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
langchain-community = "^0.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
